# Practica_de_ejercicios-

./: CMakeLists.txt  README.md
Ej_1/: main.cpp
Ej_10/: main.cpp
Ej_11/: main.cpp
Ej_12/: main.cpp
Ej_13/: main.cpp
Ej_14/: main.cpp
Ej_15/: main.cpp
Ej_2/: main.cpp
Ej_3 /: main.cpp
Ej_4/: area.cpp  area.h  main.cpp
Ej_5/: comparador.cpp  comparador.h  main.cpp
Ej_6/: main.cpp
Ej_7/: main.cpp
Ej_8/: main.cpp
