cmake_minimum_required(VERSION 3.29)
project(Practica_de_ejercicios_)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ejercicio_1
        "Ej_1/main.cpp")
add_executable(Ejercicio_2
        "Ej_2/main.cpp")
add_executable (Ejercicio_3
        "Ej_3 /main.cpp")
add_executable(Ejercicio_4
        "Ej_4/main.cpp"
        "Ej_4/area.cpp")
add_executable(Ejercicio_5
        "Ej_5/main.cpp"
        "Ej_5/comparador.cpp")
add_executable(Ejercicio_6
        "Ej_6/main.cpp")
add_executable(Ejercicio_7
        "Ej_7/main.cpp")
add_executable(Ejercicio_8
        "Ej_8/main.cpp")
add_executable(Ejercicio_9
        "Ej_9/main.cpp")
add_executable(Ejercicio_10
        "Ej_10/main.cpp")
add_executable(Ejercicio_11
        "Ej_11/main.cpp")
add_executable(Ejercicio_13
        "Ej_13/main.cpp")